<resources>

    <string name="app_name">The Zone Diet Build3</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">The Zone</string>
    <string name="label_new_profile">New profile</string>
    <string name="label_load_profile">Load profile</string>
    <string name="label_radio_man">Man</string>
    <string name="label_radio_woman">Woman</string>
    <string name="label_button_create_profile">Create profile</string>
    <string name="label_check_box_imperial">Imperial</string>
    <string name="label_profile">Profile</string>
    <string name="separator">|</string>
    <string name="empty">No profile(s)</string>
    <string name="label_load_profile_activity">Profile(s)</string>
    <string name="label_delete_profile">Delete profile(s)</string>
    
    <string name="label_delete_profile_activity">Delte profile(s)</string>
    <string name="label_update_profile">Update profile</string>
    <string name="label_button_confirm_profile">Confirm</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_weight_statistics">Weight</string>
    <string name="label_waist_statistics">Waist</string>
    <string name="label_wrist_statistics">Wrist</string>
    <string name="label_physical_activity_5">5</string>
    <string name="label_physical_activity_6">6</string>
    <string name="label_physical_activity_7">7</string>
    <string name="label_physical_activity_8">8</string>
    <string name="label_physical_activity_9">9</string>
    <string name="label_physical_activity_10">10</string>
    <string name="label_physical_activity">Physical activity level:</string>
    <string name="label_check_box_metric">Metric</string>
    
    <string name="title_what_contains_one_block">What contains one block?</string>
    <string name="title_list_dialog">One block examples</string>
    <string name="title_menu_list">Examples</string>
    <string name="title_menu_help">Block</string>
    <string  name="title_delete_dialog">Delete profile</string>
    <string name="_7_grams_protein">7 grams protein</string>
    <string name="label_one_block_contains">One block contains:</string>
    <string name="_9_grams_carbohydrate">9 grams carbohydrate</string>
    <string name="_1_5_grams_fat">1.5 grams fat</string>
    <string name="label_daily_blocks">Daily blocks:</string>

</resources>